--- a/requirements.txt
+++ b/requirements.txt
@@ -5,23 +5,34 @@ aiosignal >=1,<2
 annotated-types <1
 anyio >=4,<5
 attrs >=23,<24
-comfy_catapult @ git+https://github.com/realazthat/comfy-catapult.git@cda29659818b37f2c9f8574bf202f87773f36cb5
+comfy_catapult @ git+https://github.com/realazthat/comfy-catapult.git@144c4bb236ab3020952f7ddc152d1c41a0e002bf
+fqdn >=1,<2
 frozenlist >=1,<2
 fsspec==2024.2.0
 h11 <1
-h2 >4,<5
+h2 >=4,<5
 hpack >=4,<5
 idna >=3,<4
+isoduration >=20,<21
+jsonpointer>1.13
+jsonschema >=4,<5
+jsonschema-specifications==2023.12.1
 multidict >=6,<7
 pydantic >=2,<3
 pydantic_core >=2,<3
 pydash >=7,<8
+python-datauri >=2,<3
 python-slugify >=8,<9
 PyYAML >=6,<7
+rfc3339-validator <1
+rfc3986-validator >0.1.0,<1
 rich >=13,<14
 six >=1,<2
 sniffio >=1,<2
+StrEnum >=0.4,<1
 text-unidecode >=1,<2
 toml <1
 typing_extensions >=4,<5
+uri_template >=1,<2
+webcolors >=1.11,<2
 websockets >=12,<13
