Add serve, client upload, client execute, and execute commands, refactor.
* Refactor arg parsing.
* Add --version.
* Separate out _ErrorContext into its own file.
* Separate out types into lowda_types.py.
* Add logging.
* Double validate pydantic base models from input.
* Switch to pyproject.toml instead of setup.py
* Update scripts.
* Use prettier instead of mdmarkdown
* Don't add license header to any py files in scripts/ directory.
* Fix pin script.
* Fix ensure-reqs.sh.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -36,13 +36,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version.gh }}
+      - name: Install nvm
+        run: |
+          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
       - name: Set up .python-version
         run: |
           echo "${{ matrix.python-version.file }}"
           echo "${{ matrix.python-version.file }}" > .python-version
           cat .python-version
       - name: Install Bash (Ubuntu)
-        run: sudo apt-get update && sudo apt-get install -y bash wget
+        run: sudo apt-get update && sudo apt-get install -y bash wget xxhash
       - name: Install tiv
         run: |
           wget https://github.com/stefanhaustein/TerminalImageViewer/archive/8aca9afaf72c4f0d458db62b62b6401f75d6ee8d.zip
